# yolov5_RV1126

./: README.md
DriverManager/: CMakeLists.txt  README.md  adduser.cpp  adduser.h  adduser.ui  driver.cpp  driver.h  driver.ui  facedetect.cpp  facedetect.h  main.cpp  sqlmgr.cpp  sqlmgr.h
DriverManager/images/: img.qrc
FatigueDetection/: CMakeLists.txt  README.md  detect.cpp  detect.h  detect_loop.cpp  detect_loop.h  detect_postprocess.cpp  detect_postprocess.h  fatigue.cpp  fatigue.h  fatigue.ui  main.cpp  utils.cpp  utils.h  yolov5_dect.cpp  yolov5_dect.h
FatigueDetection/SOURCE/: images.qrc
FatigueDetection/include/: drm_func.h  postprocess.h
